--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
 .App {
   display: flex;
 }
+.error-meessage {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
